# dev-board

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  justfile  package-lock.json  package.json  rustfmt.toml
.sqlx/: query-0a0cf948d3f964f21b2dabf7446726763155cd4f45d1610e1cd381c676141c35.json  query-0e458ec6b966c1784fb409ded37d191eee0147677b8f85a14c964c06b9634cd1.json  query-3d2e287ec4c405ae804dab3fcf50cc89c1e3ed4a5f31d5e3658cfb5077047958.json  query-4590bdc3abeea2ec74d7c7fdb68f711a5a3bbc35a8604e901c74d45a7c44bd4f.json  query-58374a9badd2499a95dc1004b074165af25adb46bd1034237a15d37528389e31.json  query-63f618ba3344c8d55ed530ba925df169c537476dec216fbc4fd96ba0da3c3230.json  query-660eb362c20b084852266dc4b801d797e84df5169609587830899d9761a45c5c.json  query-6b2909929da2fef8cd6d6a4e6bc0ffcc3b2f5cf2f5bcc09017b0065b6d84c9a2.json  query-720b5c794f86979f3c6178dc42ae55fb3bb315592cff5689f8d845fdf4f94564.json  query-78f3d83529a83fedc8f074645e1dc32951dcc6f0f374bd5f550ac22922cf2849.json  query-87c16c19bced095dc6ab568fa6941f0823946ce3a496d35633b43e5603b26e60.json  query-a370b9edba01e681b65f9f398a946d59e90aeac8b3bc527b8797ac851e2e273e.json  query-d1aa73ce143b4a66de81e9a17ad4ae0d9770a8df2ed617b4005dce195216ed75.json  query-d4550d20927a1d2f36fb675b494777aae2eeac5267f312096b363fcd9c0c216a.json  query-ec692ecb46684092b4da8b38d4a7ec661b1f75d24d520ee771630da467660ad2.json
config/: config-docker.toml  config.toml
data/: init_sql.sql
migrations/: 20231128021626_users.up.sql  20231130043406_pr.down.sql  20231130043406_pr.up.sql  (+2 more)
(+38 files in other folders)
