[package]
name = "dev-board"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = 'abort'

[dependencies]
anyhow = "1.0.75"
argon2 = { version = "0.5.2", features = [] }
clia-tracing-config = "0.2.5"
jsonwebtoken = "8.3.0"
once_cell = "1.18.0"
rand = { version = "0.8.5", features = [] }
rust-embed = "8.0.0"
salvo = { version = "0.58", features = ["anyhow", "logging", "cors", "oapi", "jwt-auth", "rustls", "catch-panic", "cookie", "serve-static"] }
serde = "1.0.188"
sqlx = { version = "0.7", features = ["runtime-tokio", "macros", "postgres"] }
thiserror = "1.0.48"
time = "0.3.28"
tokio = { version = "1", features = ["full"] }
toml = "0.8.0"
tracing = "0.1"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
validator = { version = "0.16", features = ["derive"] }
serde_derive = { version = "1.0.193", features = [] }
clap = { version = "4.4.10", features = ["cargo"] }
